# FiCo-ITR

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg
docs/: alignment.md  similarity.md  tasks.md
examples/: alignment_example.py
paper/: README.md  demo.py
paper_tutorial/: README.md  demo.py  demo_simplified.py
paper_tutorial/results_data/: README.md
src/fico_itr/: __init__.py  similarity.py  tasks.py
tests/: test_fico_itr.py  test_utils.py
