[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fico_itr"
version = "0.1.0"
description = "A comprehensive library for evaluating image-text retrieval models"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/fico_itr"
"Bug Tracker" = "https://github.com/yourusername/fico_itr/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["fico_itr*"]